# Model_Regression_Detector

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.yaml
datasets/email_classifier/: v1.json
docs/: architecture.md  current-system-analysis.md  implementation-roadmap.md  product-audit.md  product-gap-analysis.md  roadmap.md
features/featuretest1/: feature.yaml
features/featuretest1/datasets/featuretest1/: v1.json
features/featuretest1/prompts/featuretest1/: v1.yaml
src/mrds/: __init__.py
src/mrds/alerting/: __init__.py  messages.py  models.py  notifier.py  slack.py
src/mrds/cli/: __init__.py  main.py
src/mrds/config/: __init__.py  settings.py
src/mrds/core/: __init__.py  hashing.py  ids.py  interfaces.py
src/mrds/dashboard/: __init__.py  _shared.py  app.py  data.py  help_text.py
src/mrds/dashboard/pages/: 1_Runs.py  2_Trends.py  3_Regressions.py  4_Baselines.py  4_Regressions.py  6_Dataset.py
src/mrds/datasets/: __init__.py  errors.py  loader.py  models.py  registry.py  validation.py
src/mrds/db/: connection.py  repositories.py
src/mrds/demo/: __init__.py  __main__.py  client.py  generator.py  seed.py
src/mrds/evaluation/: __init__.py  config.py  engine.py  errors.py  metrics.py  models.py  scoring.py
src/mrds/features/email_classifier/: feature.py
src/mrds/observability/: __init__.py  logging.py
src/mrds/regression/: __init__.py  detector.py  errors.py  models.py  promotion.py  thresholds.py
src/mrds/reporting/: __init__.py  builder.py  models.py
src/mrds/reporting/templates/: evaluation_report.html.j2  evaluation_summary.md.j2  regression_report.html.j2  regression_summary.md.j2
tests/: conftest.py
tests/unit/: test_alerting.py  test_cli.py  test_config.py  test_core.py  test_dashboard.py  test_datasets.py  test_demo.py  test_evaluation_engine.py  test_evaluation_metrics.py  test_regression.py  test_reporting.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/create/: page.tsx
web/app/features/[feature]/: layout.tsx  page.tsx
web/app/features/[feature]/baseline/: page.tsx
web/app/features/[feature]/compare/: page.tsx
web/app/features/[feature]/dataset/: page.tsx
web/app/features/[feature]/runs/: page.tsx
web/components/: app-shell.tsx  cases-explorer.tsx  compare-view.tsx  create-wizard.tsx  dataset-explorer.tsx  promote-button.tsx  regressions-view.tsx  trend-chart.tsx  workspace-nav.tsx
web/components/ui/: bar.tsx  button.tsx  copy-id.tsx  gauge.tsx  reveal.tsx  sparkline.tsx  status.tsx
web/lib/: api.ts  utils.ts
(+3 files in other folders)
